Created the user profile update. user is only allowed to update if they are a staff member. Realistically i wouldnt do this but for this project only the admin is going to be a guest user. accounted for this is the api also. In the action for updating the user, I not have the normal success reducer but I call again the login reducer and update the localState of userInfo. Then I created an api to delete a group if they are the creator. This required model modification. Since many apis used that model, I made the default value for it the admin user 1. But I also update the api for creating a group to account for storing the requesting user as the creator. The action and reducers are called in the popup that was created to confirm if the user wanted to delete the group. A button on the login page was added to log in users with the guest account. Email and password of guest account is stored in env file. Many of the other files were modified to update the frontend look.

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,5 @@
 # GENERATE_SOURCEMAP=false
 # PUBLIC_URL=https://proshop-jeus.s3.amazonaws.com
+
+REACT_APP_GUEST_EMAIL=jeus@email.com
+REACT_APP_GUEST_PASS=hellofresh
