--- a/frontend/.env
+++ b/frontend/.env
@@ -3,3 +3,7 @@
 
 REACT_APP_GUEST_EMAIL=jeus@email.com
 REACT_APP_GUEST_PASS=hellofresh
+
+REACT_APP_CLIENT_ID=421821977514-89jnp5pdrar7grusc3u5e33mknt84o6m.apps.googleusercontent.com
+REACT_APP_CLIENT_SECRET=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
+REACT_APP_APP_ID=coincompanion-399110
