removed env data

--- a/backend/.env
+++ b/backend/.env
@@ -1,10 +1,1 @@
-AWS_DATABASE_NAME=CoinCompanion_Database
-AWS_DATABASE_USER=companion_323279
-AWS_DATABASE_PASS=12Ct4JfmNi1F5BVmkY5B
-AWS_DATABASE_HOST=coincompanion.cicjvzefphtz.us-east-2.rds.amazonaws.com
-AWS_DATABASE_PORT=5432
-
-AWS_IAM_ACCESS_KEY=AKIATPCLCPSD7SGVAROE
-AWS_IAM_SECRET_ACCESS_KEY=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
-
-AWS_STORAGE_BUCKET_NAME=coincompanion-bucket
+# some data
